# strc_log

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  Makefile  build_and_run.sh  main.cpp  strc.cpp  strc.json
include/strc_log/: strc_log.h
tools/: parse_log.py
